--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jss-vendor-prefixer",
   "description": "JSS plugin that handles vendor prefixes on the browser",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "author": {
     "name": "Oleg Slobodskoi",
     "email": "oleg008@gmail.com"
@@ -30,27 +30,29 @@
   },
   "license": "MIT",
   "dependencies": {
-    "css-vendor": "^0.3.1"
+    "css-vendor": "^0.3.4"
   },
   "main": "./lib/index.js",
   "devDependencies": {
     "babel-cli": "^6.5.1",
     "babel-core": "^6.5.1",
-    "babel-eslint": "^5.0.0-beta9",
-    "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.5.0",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^5.0.0",
-    "eslint-config-jss": "^0.2.0",
-    "eslint-plugin-react": "^3.16.1",
-    "jss": "^3.3.0",
+    "eslint": "^2.8.0",
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-config-jss": "^1.1.0",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^1.5.5",
+    "eslint-plugin-react": "^5.0.1",
+    "jss": "^5.2.0",
     "opener": "^1.4.1",
-    "qunitjs": "1.21.0",
-    "rimraf": "^2.5.1",
-    "webpack": "^2.0.7-beta"
+    "qunitjs": "^1.21.0",
+    "rimraf": "^2.5.4",
+    "webpack": "^1.13.1"
   },
   "peerDependencies": {
-    "jss": "^3.3.0"
+    "jss": "^5.2.0"
   }
 }
