--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "jss-vendor-prefixer",
   "description": "JSS plugin that handles vendor prefixes on the browser",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "author": {
     "name": "Oleg Slobodskoi",
     "email": "oleg008@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:jsstyles/jss-vendor-prefixer.git"
+    "url": "git@github.com:cssinjs/jss-vendor-prefixer.git"
   },
   "keywords": [
     "jss",
@@ -18,41 +18,73 @@
   ],
   "engines": {},
   "scripts": {
-    "all": "npm run lint && npm run build",
-    "test": "opener ./test/index.html",
-    "build": "npm run clean && npm run build:lib && npm run build:max && npm run build:min",
-    "clean": "rimraf ./lib/*",
+    "all": "npm run lint && npm run test && npm run build",
+    "build": "npm run clean && npm run build:lib && npm run build:tests && npm run build:dist",
     "build:lib": "babel src --out-dir lib",
-    "build:max": "NODE_ENV=development webpack src/index.js dist/jss-vendor-prefixer.js",
-    "build:min": "NODE_ENV=production webpack src/index.js dist/jss-vendor-prefixer.min.js",
+    "build:tests": "npm run build:tests:lib && npm run build:tests:local",
+    "build:tests:lib": "cross-env NODE_ENV=test babel src --out-dir tests",
+    "build:tests:local": "cross-env NODE_ENV=test webpack src/index.test.js tmp/tests.js",
+    "build:dist": "npm run build:dist:max && npm run build:dist:min",
+    "build:dist:max": "cross-env NODE_ENV=development webpack src/index.js dist/jss-vendor-prefixer.js",
+    "build:dist:min": "cross-env NODE_ENV=production webpack src/index.js dist/jss-vendor-prefixer.min.js",
+    "clean": "rimraf {lib,dist,tests,tmp}/*",
     "lint": "eslint ./src",
-    "prepublish": "npm run all && git push --tags"
+    "lint:staged": "lint-staged",
+    "test": "cross-env NODE_ENV=test karma start --single-run ",
+    "test:watch": "cross-env NODE_ENV=test karma start",
+    "prepublish": "npm run all"
   },
   "license": "MIT",
   "dependencies": {
     "css-vendor": "^0.3.4"
   },
-  "main": "./lib/index.js",
+  "main": "lib/index.js",
   "devDependencies": {
     "babel-cli": "^6.5.1",
     "babel-core": "^6.5.1",
-    "babel-eslint": "^6.1.2",
+    "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
+    "babel-plugin-transform-es3-property-literals": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
-    "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^8.0.0",
-    "eslint-config-jss": "^1.1.0",
-    "eslint-plugin-import": "^1.12.0",
-    "eslint-plugin-jsx-a11y": "^1.5.5",
-    "eslint-plugin-react": "^5.0.1",
-    "jss": "^5.2.0",
-    "opener": "^1.4.1",
-    "qunitjs": "^1.21.0",
+    "cross-env": "^3.1.3",
+    "es5-shim": "^4.5.9",
+    "eslint": "^3.9.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-config-jss": "^2.4.0",
+    "eslint-plugin-import": "^2.1.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.5.0",
+    "expect.js": "^0.3.1",
+    "jss": "^5.5.2",
+    "karma": "^1.1.1",
+    "karma-benchmark": "^0.6.0",
+    "karma-benchmark-reporter": "^0.1.1",
+    "karma-browserstack-launcher": "^1.0.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.1.1",
+    "karma-mocha-reporter": "^2.2.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
+    "lint-staged": "^3.0.3",
+    "mocha": "^3.0.2",
+    "pre-commit": "^1.1.3",
     "rimraf": "^2.5.4",
     "webpack": "^1.13.1"
   },
   "peerDependencies": {
     "jss": "^5.2.0"
-  }
+  },
+  "peerDependencies": {
+    "jss": "^5.5.6"
+  },
+  "lint-staged": {
+    "./src/*.js": [
+      "eslint",
+      "git add"
+    ]
+  },
+  "pre-commit": "lint:staged"
 }
